# c_ingestify

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ingestify_ignore.txt  main.c  main_test.c
components/common/: CMakeLists.txt  common.c  common.h
components/ignore/: CMakeLists.txt  ignore.c  ignore.h
components/ingestify/: CMakeLists.txt  ingestify.c  ingestify.h
test/: file_a.txt  file_b.txt  file_c.hex  file_d.hex  ingestify_ignore.txt
